fixed align items in form contaier and Tre container

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,8 @@ main, footer {
 .tre-container, .telia-container, .tele2-container, .telenor-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: 20px;
     width: 300px;
     height: 80vh;
     border: 2px solid var(--red);
